Fixed scan popup dialog scan text being covered by close button

--- a/Source/ruins.css
+++ b/Source/ruins.css
@@ -261,11 +261,19 @@ div.panzoom svg {
 #ruin_obelisk_data .obelisk{
   min-height: 32px;
   font-weight:bold;
-  font-size:150%;
-  text-align: center;
-  padding:0;
+  font-size:125%;
+  text-align: left;
+  padding:auto;
   width:100%;
   background-color: #FFCAAB;
+}
+#ruin_obelisk_data .obelisk div{
+  width:100%;
+  line-height: 1.5;
+  padding:0;
+  margin: auto;
+  text-align: center;
+
 }
 
 #ruin_obelisk_data .object div{
